<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>apex_ai_heex_demo_pkg</name>
    <version>0.0.1</version>
    <description>Disengagement demo</description>
    <maintainer email="contact@heex.io">Heex Technologies</maintainer>
    <license>Copyright 2023 by Heex Technologies. All rights reserved.</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>apex_cmake</buildtool_depend>

    <depend>apex_init</depend>
    <depend>cpputils</depend>
    <depend>executor</depend>
    <depend>interrupt</depend>
    <depend>logging</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>


    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>apex_test_tools</test_depend>
    <test_depend>apex_integration_test_node</test_depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
