<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_edge_in_memory_buffer_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 snapshotter sample using a monitor and a recorder</description>
  <maintainer email="contact@heex.io">ros2</maintainer>
  <license>Copyright 2023 by Heex Technologies. All rights reserved.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rosbag2</depend>
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
